--- a/settings.yaml
+++ b/settings.yaml
@@ -6,6 +6,11 @@ system:
 log:
   app: blog_server
   dir:
+ai:
+  enable: 
+  secretKey: 
+  nickname: 
+  avatar: 
 redis:
   addr: 127.0.0.1:6379
   password:
