feat-文件大小判断和文件后缀判断优化

--- a/settings.yaml
+++ b/settings.yaml
@@ -26,6 +26,14 @@ jwt:
   expire: 3
   secret: xxx
   issuer: naseem
+upload:
+  size: 3
+  whiteList:
+  - jpg
+  - jpeg
+  - png
+  - gif
+  uploadDir: images001
 redis:
   addr: 127.0.0.1:6379
   password: ""
