feat-用户登录列表接口

--- a/settings.yaml
+++ b/settings.yaml
@@ -44,10 +44,10 @@ site:
     keywords: 关键词测试
     description: 介绍测试
   login:
-    qqLogin: false
+    qqLogin: true
     usernamePwdLogin: true
     emailLogin: true
-    captcha: true
+    captcha: false
   indexRight:
     list: []
   article:
