--- a/init/deploy/docker-compose.yml
+++ b/init/deploy/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.2'
+
 services:
   mysql-master:
     image: "mysql:5.7"
@@ -15,8 +16,8 @@ services:
       --lower_case_table_names=1
       --max_allowed_packet=128M;
     ports:
-      - 3306:3306  #映射宿主机端口：容器端口
-    volumes:  #宿主机配置目录或文件挂载到容器
+      - 3306:3306
+    volumes:
       - ./master/my.cnf:/etc/mysql/my.cnf
       - ./master/mysql-files:/var/lib/mysql-files
       - ./master/data:/var/lib/mysql
@@ -24,6 +25,7 @@ services:
     networks:
       blogx_network:
         ipv4_address: 10.2.0.2
+
   mysql-slave:
     image: "mysql:5.7"
     container_name: mysql-slave
@@ -39,8 +41,8 @@ services:
       --lower_case_table_names=1
       --max_allowed_packet=128M;
     ports:
-      - 3307:3306  #映射宿主机端口：容器端口
-    volumes:  #宿主机配置目录或文件挂载到容器
+      - 3307:3306
+    volumes:
       - ./slave/my.cnf:/etc/mysql/my.cnf
       - ./slave/mysql-files:/var/lib/mysql-files
       - ./slave/data:/var/lib/mysql
@@ -48,6 +50,7 @@ services:
     networks:
       blogx_network:
         ipv4_address: 10.2.0.3
+
   es:
     image: "elasticsearch:7.12.0"
     restart: always
@@ -55,6 +58,9 @@ services:
     environment:
       discovery.type: single-node
       ES_JAVA_OPTS: "-Xms512m -Xmx512m"
+      xpack.security.enabled: "true"
+      xpack.security.transport.ssl.enabled: "false"
+      ELASTIC_PASSWORD: "5Bs7)qg}6Q"
     ports:
       - 9200:9200
     volumes:
@@ -62,7 +68,23 @@ services:
     networks:
       blogx_network:
         ipv4_address: 10.2.0.4
-networks:  #定义容器连接网络
+
+  redis:
+    image: redis:6.2
+    container_name: redis
+    restart: always
+    privileged: true
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis/data:/data
+      - ./redis/redis.conf:/etc/redis/redis.conf
+    command: ["redis-server", "/etc/redis/redis.conf"]
+    networks:
+      blogx_network:
+        ipv4_address: 10.2.0.5
+
+networks:
   blogx_network:
     driver: bridge
     ipam:
