--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,27 @@
-# ========================================
-# Go 构建产物
-# ========================================
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-*.test
-*.out
-
-/bin/
-/build/
-
-/vendor/
-
-*.coverprofile
-*.cov
-coverage.*
-
-# ========================================
-# 编辑器 & 系统文件
-# ========================================
+# --- 忽略 IDE 配置 ---
 .vscode/
 .idea/
-.DS_Store
 
-# ========================================
-# 日志目录：保留 logs/ 结构，不上传内容
-# ========================================
+# --- 忽略 var 文件夹及其所有内容 ---
+var/
+
+# --- 忽略 testdata 文件夹及其所有内容 ---
+testdata/
+
+# --- 忽略 uploads 下所有内容 ---
+uploads/**
+!uploads/
+!uploads/.gitkeep
+!uploads/images/
+!uploads/images/.gitkeep
+!uploads/images001/
+!uploads/images001/.gitkeep
+
+# --- 忽略 logs 目录下所有内容 ---
 logs/**
+!logs/
 !logs/.gitkeep
 
-# ========================================
-# 上传目录：保留 uploads/，忽略内容
-# ========================================
-uploads/**
-!uploads/.gitkeep
-
-# ========================================
-# 敏感配置（你说本地没敏感就不忽略 settings.yaml）
-# ========================================
-*.env
-settings.yaml
-
-# ========================================
-# 其他临时文件
-# ========================================
-*.pid
-*.sock
-*.tmp
-/tmp/
-
-# ========================================
-# 前端项目（如果有）
-node_modules/
-dist/
-*.tsbuildinfo
-
-# ========================================
-# 编辑器辅助配置（可忽略也可保留）
+# --- 忽略配置文件 ---
 jsconfig.json
+setting.yaml
