--- a/init/deploy/docker-compose.yml
+++ b/init/deploy/docker-compose.yml
@@ -1,5 +1,4 @@
-version: '3.2'
-
+version: "3.2"
 services:
   mysql-master:
     image: "mysql:5.7"
@@ -7,50 +6,24 @@ services:
     restart: always
     privileged: true
     environment:
-      MYSQL_ROOT_PASSWORD: 123456  #主库root用户的密码
-    command:
-      --default-authentication-plugin=mysql_native_password
+      MYSQL_ROOT_PASSWORD: 123456 #主库root用户的密码
+      TZ: Asia/Shanghai
+      MYSQL_DATABASE: blog
+    command: --default-authentication-plugin=mysql_native_password
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_general_ci
       --explicit_defaults_for_timestamp=true
       --lower_case_table_names=1
       --max_allowed_packet=128M;
-    ports:
-      - 3306:3306
-    volumes:
+    volumes: #宿主机配置目录或文件挂载到容器
       - ./master/my.cnf:/etc/mysql/my.cnf
       - ./master/mysql-files:/var/lib/mysql-files
       - ./master/data:/var/lib/mysql
       - ./master/log:/var/log/
+      - ./master/db.sql:/docker-entrypoint-initdb.d/db.sql
     networks:
-      blogx_network:
+      blog_network:
         ipv4_address: 10.2.0.2
-
-  mysql-slave:
-    image: "mysql:5.7"
-    container_name: mysql-slave
-    restart: always
-    privileged: true
-    environment:
-      MYSQL_ROOT_PASSWORD: 123456  #从库root用户的密码
-    command:
-      --default-authentication-plugin=mysql_native_password
-      --character-set-server=utf8mb4
-      --collation-server=utf8mb4_general_ci
-      --explicit_defaults_for_timestamp=true
-      --lower_case_table_names=1
-      --max_allowed_packet=128M;
-    ports:
-      - 3307:3306
-    volumes:
-      - ./slave/my.cnf:/etc/mysql/my.cnf
-      - ./slave/mysql-files:/var/lib/mysql-files
-      - ./slave/data:/var/lib/mysql
-      - ./slave/log:/var/log/
-    networks:
-      blogx_network:
-        ipv4_address: 10.2.0.3
-
   es:
     image: "elasticsearch:7.12.0"
     restart: always
@@ -58,34 +31,48 @@ services:
     environment:
       discovery.type: single-node
       ES_JAVA_OPTS: "-Xms512m -Xmx512m"
-      xpack.security.enabled: "true"
-      xpack.security.transport.ssl.enabled: "false"
-      ELASTIC_PASSWORD: "5Bs7)qg}6Q"
-    ports:
-      - 9200:9200
     volumes:
       - ./es/data:/usr/share/elasticsearch/data
     networks:
-      blogx_network:
-        ipv4_address: 10.2.0.4
-
-  redis:
-    image: redis:6.2
-    container_name: redis
-    restart: always
-    privileged: true
-    ports:
-      - "6379:6379"
-    volumes:
-      - ./redis/data:/data
-      - ./redis/redis.conf:/etc/redis/redis.conf
-    command: ["redis-server", "/etc/redis/redis.conf"]
-    networks:
-      blogx_network:
+      blog_network:
         ipv4_address: 10.2.0.5
-
-networks:
-  blogx_network:
+  redis:
+    restart: always
+    image: redis:5.0.5
+    networks:
+      blog_network:
+        ipv4_address: 10.2.0.6
+  blog_server:
+    restart: always
+    build: ../../
+    networks:
+      blog_network:
+        ipv4_address: 10.2.0.7
+    depends_on:
+      - mysql-master
+      - es
+      - redis
+    volumes:
+      - ./blog_server/settings.yaml:/app/settings.yaml
+      - ./blog_server/uploads:/app/uploads
+      - ./blog_server/logs:/app/logs
+    command: "/app/main"
+  blog_web:
+    image: nginx:latest
+    restart: always
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/logs:/var/log/nginx/
+      - ./blog_web/dist:/usr/share/nginx/fai_web
+      - ./nginx/cert/:/usr/share/nginx/cert
+    networks:
+      blog_network:
+        ipv4_address: 10.2.0.8
+    ports:
+      - "80:80"
+      - "443:443"
+networks: #定义容器连接网络
+  blog_network:
     driver: bridge
     ipam:
       driver: default
